--- a/src/app/core/views/auth/login/login.component.html
+++ b/src/app/core/views/auth/login/login.component.html
@@ -23,7 +23,7 @@
         } 
       </div>
   
-    
+    <div class="text-center mt-4 text-sm text-red-300"> Note : To get the full experience you need to login with your premium spotify account</div>
   
   
   
